force-app/main/default/objects/AssignmentSubmission__c/AssignmentSubmission__c.object-meta.xml
<CustomObject>
    <label>Assignment Submission</label>
    <nameField>
        <displayFormat>VS-{0000000}</displayFormat>
        <label>Assignment Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AssignmentSubmissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>