force-app/main/default/objects/AssignmentSubmission__c/fields/AssignmentId__c.field-meta.xml
<CustomField>
    <fullName>AssignmentId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>Assignment__c</referenceTo>
    <relationshipLabel>AssignmentSubmissions</relationshipLabel>
    <relationshipName>AssignmentSubmissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>