force-app/main/default/objects/AssignmentSubmission__c/fields/FileURL__c.field-meta.xml
<CustomField>
    <fullName>FileURL__c</fullName>
    <label>File URL</label>
    <type>Url</type>
</CustomField>