force-app/main/default/objects/AssignmentSubmission__c/fields/LateSubmission__c.field-meta.xml
<CustomField>
    <fullName>LateSubmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late Submission</label>
    <type>Checkbox</type>
</CustomField>