force-app/main/default/objects/AssignmentSubmission__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>GradingInProgress</fullName>
                <label>Grading in Progress</label>
            </value>
            <value>
                <fullName>Graded</fullName>
            </value>
            <value>
                <fullName>ResubmissionRequired</fullName>
                <label>Resubmission Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>