force-app/main/default/objects/AssignmentSubmission__c/fields/SubmissionText__c.field-meta.xml
<CustomField>
    <fullName>SubmissionText__c</fullName>
    <label>Submission Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>