force-app/main/default/objects/AssignmentSubmission__c/fields/SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDate__c</fullName>
    <label>Submitted Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>